<resources>
    <string name="app_name">SafeTrip</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_new_post_activitiy">NewPostActivitiy</string>
    <string name="title_activity_view_all_post">ViewAllPostActivity</string>
    <string name="title_activity_view_self_post">ViewSelfPostActivity</string>
    <string name="title_activity_new_post">NewPostActivity</string>
    <string name="title_activity_view_detailed_self_post">ViewDetailedSelfPostActivity</string>
    <string name="Administrate_Users">Users</string>
    <string name="Manage_Friends">Manage Friends</string>
    <string name="Pending_Friends_Requests">Pending Friends Requests</string>
    <string name="Basic_Information">Basic Information</string>
    <string name="Username">Username</string>
    <string name="ok">ok</string>
    <string name="View_Pending_Requests">View Pending Requests</string>
    <string name="YBtn">Y</string>
    <string name="NBtn">N</string>

    <string name="SafeTrip">SafeTrip</string>
    <string name="Signin">Sign in</string>
    <string name="Login">Login</string>
    <string name="Signup">Signup</string>
    <string name="EditPassword">Edit Password</string>
    <string name="Finish">Finish</string>
    <string name="ManageUsername">Manage Username</string>
    <string name="OldUsername">Old Username: Java18641</string>
    <string name="MyProfile">My Profile</string>
    <string name="username">Username: Java18641</string>
    <string name="Picture">Upload/Edit Piture</string>
    <string name="newaccount">New Account</string>
    <string name="information">By Signing up you agree with our terms and conditions</string>
    <string name="User">User</string>
    <string name="ManagePost">Manage Post</string>
    <string name="ManageFriends">Manage Friends</string>
    <string name="Admin">Admin</string>

    <string name="Manage_Post_Label"> Manage Post</string>
    <string name="Manage_Post_NewPost"> New Post</string>
    <string name="Manage_Post_ViewAllPost"> View Friends Post</string>
    <string name="Manage_Post_ViewSelfPost"> View Self Post</string>

    <string name="New_Post_Label"> New Post</string>
    <string name="New_Post_DateHint"> Date: 01/01/2016 Required</string>
    <string name="New_Post_PlateHint"> License Plate: Required</string>
    <string name="New_Post_DestinationHint"> Destination: Required</string>
    <string name="New_Post_ModelHint"> Car Model: Optional</string>
    <string name="New_Post_ColorHint"> Car Color: Optional</string>
    <string name="New_Post_DepartureHint"> Departure: Optional</string>
    <string name="New_Post_FinishBtn">Finish</string>

    <string name="Detailed_Self_Post_MyPostLabel">My Post</string>
    <string name="Detailed_Self_Post_Date">Date</string>
    <string name="Detailed_Self_Post_Plate">License Plate</string>
    <string name="Detailed_Self_Post_Destination">Destination</string>
    <string name="Detailed_Self_Post_Model">Car Model</string>
    <string name="Detailed_Self_Post_Color">Car Color</string>
    <string name="Detailed_Self_Post_Departure">Departure</string>
    <string name="Detailed_Self_Post_DeleteBtn">Delete</string>

    <string name="Self_Post_MyPostLabel"> My Post</string>
    <string name="Self_Post_Date"> Date</string>
    <string name="Self_Post_Destination"> Destination</string>

    <string name="View_All_Post_AllPostLabel"> Friends Post</string>
    <string name="View_All_Post_Username"> Username</string>
    <string name="View_All_Post_Date"> Date</string>
    <string name="View_All_Post_Plate"> License Plate</string>
    <string name="View_All_Post_Destination"> Destination</string>
    <string name="View_All_Post_Model"> Model</string>
    <string name="View_All_Post_Color"> Color</string>
    <string name="View_All_Post_Departure"> Departure Place</string>
    <string name="Hello">Hello !</string>
    <string name="title_activity_detailed_pending_request">DetailedPendingRequest</string>
    <string name="Invitation_Information">Detailed Invitation Information</string>
    <string name="Accept">Accept</string>
    <string name="Decline">Decline</string>
    <string name="Email">Email</string>
    <string name="Add_New_Friend">Add New Friend</string>
    <string name="title_activity_maps">Map</string>

    <string name="menuitem_log_out">Log Out</string>
    <string name="menuitem_main_page">User Page</string>
    <string name="Admin_View_All_Post">All Post</string>
    <string name="title_activity_admin_view_all_post">AdminViewAllPostActivity</string>
    <string name="All_Post">All Posts</string>
    <string name="ShareLocation">ShareLocation</string>
    <string name="Track_Location">Track</string>
    <string name="title_activity_track_location">TrackLocationActivity</string>
    <string name="TrackLocationInfo1">* SafeTrip Preserved Rights To Issue Indeeds Involves Crimes.</string>
    <string name="TrackLocationInfo2">* You ONLY Have Rights To Track Locations Of Your Friends.</string>
    <string name="TrackLocationInfo3">* You ONLY Have Rights To Track Your Friend Who Has
                                        Agreed To Share His/Her Location.</string>
    <string name="AdminBack">Back</string>

</resources>
