<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/View_All_Post_Username"
                android:textStyle="bold|italic"
                android:id="@+id/ViewAllPost_Username"
                android:gravity="center" />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/View_All_Post_Date"
                android:layout_weight="0.4"
                android:id="@+id/ViewAllPost_Date"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/View_All_Post_Plate"
                android:layout_weight="0.6"
                android:id="@+id/ViewAllPost_LicensePlate"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/View_All_Post_Destination"
                android:layout_weight="0.4"
                android:id="@+id/ViewAllPost_Destination"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/View_All_Post_Model"
                android:layout_weight="0.6"
                android:id="@+id/ViewAllPost_CarModel"
                android:gravity="center" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/View_All_Post_Color"
                android:layout_weight="0.4"
                android:id="@+id/ViewAllPost_CarColor"
                android:gravity="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/View_All_Post_Departure"
                android:layout_weight="0.6"
                android:id="@+id/ViewAllPost_Departure"
                android:gravity="center" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:id="@+id/ViewAllPost_Blank" />

    </LinearLayout>




</LinearLayout>
