<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/userPage_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/User"
        android:textColor="#2C3646"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="150dp"
        />


    <LinearLayout
        android:id="@+id/userPage_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="190dp"
        android:orientation="vertical">


        <Button
            android:id="@+id/userPage_myProfile"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/MyProfile"
            android:textStyle="bold"
            android:background="@drawable/round"
            android:textColor="#CBD1DC"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="14dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/userPage_post"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/ManagePost"
            android:textStyle="bold"
            android:background="@drawable/round"
            android:textColor="#CBD1DC"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="14dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/userPage_friends"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/ManageFriends"
            android:textStyle="bold"
            android:background="@drawable/round"
            android:textColor="#CBD1DC"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="14dp"
            android:layout_marginTop="30dp"/>

        <Button
            android:id="@+id/userPage_admin"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/Admin"
            android:textStyle="bold"
            android:background="@drawable/round"
            android:textColor="#CBD1DC"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="14dp"
            android:layout_marginTop="30dp"/>


    </LinearLayout>

</RelativeLayout>
