<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.shuangliang.safetrip.ManagePostActivity"
    tools:showIn="@layout/ui_manage_post_activity"
    android:weightSum="1"
    android:orientation="vertical">


    <TextView
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Manage_Post_Label"
        android:id="@+id/ManagePost_ManagePost"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="40sp"
        android:layout_weight="0.09"
        android:textStyle="bold" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@drawable/round"
        android:textColor="#CBD1DC"
        android:text="@string/Manage_Post_NewPost"
        android:id="@+id/ManagePost_NewPost"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@drawable/round"
        android:textColor="#CBD1DC"
        android:text="@string/Manage_Post_ViewAllPost"
        android:id="@+id/ManegePost_ViewAllPost"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@drawable/round"
        android:textColor="#CBD1DC"
        android:text="@string/Manage_Post_ViewSelfPost"
        android:id="@+id/ManagePost_ViewSelfPost"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp" />
</LinearLayout>
