<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin">

    <TextView
        android:id="@+id/Admin_User_Basic_Info_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/User"
        android:textSize="50dp"
        android:layout_gravity="center"
        style="@style/TitleTextView"/>

    <ImageView
        android:layout_marginTop="20dp"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:src="@drawable/profile"/>

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Username"
            android:layout_weight="1"
            style="@style/LabelTextView"/>

        <TextView
            android:id="@+id/usernameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/LabelTextView"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Email"
            style="@style/LabelTextView"/>
        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/LabelTextView"/>
    </LinearLayout>

    <Button
        android:id="@+id/AdminBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:text="@string/AdminBack"
        android:textStyle="bold"
        android:textSize="30dp"
        android:background="@drawable/circle"
        android:textColor="#2C3646"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>