<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/logIn_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="40dp"
        android:text="@string/SafeTrip"
        android:textColor="#2C3646"
        android:gravity="center"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        />

    <TextView
        android:id="@+id/logIn_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Signin"
        android:textColor="#00051f"
        android:textSize="17dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/logIn_title"
        android:layout_marginTop="20dp"
        />
    <LinearLayout
        android:id="@+id/logIn_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logIn_text"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/logIn_text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="USERNAME"
            android:inputType="text"
            android:textColorHint="#a9b0c3"
            android:textSize="13dp"
            android:background="#00000000"
            android:paddingLeft="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a9b0c3"
            android:layout_marginTop="10dp"

            >
        </LinearLayout>

        <custom_font.MyEditText
            android:id="@+id/logIn_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="PASSWORD"
            android:inputType="textPassword"
            android:textColorHint="#a9b0c3"
            android:layout_marginTop="50dp"
            android:textSize="13dp"
            android:background="#00000000"
            android:paddingLeft="8dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#a9b0c3"
            android:layout_marginTop="10dp"
            >
        </LinearLayout>

        <Button
            android:id="@+id/logIn_login"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textStyle="bold"
            android:background="@drawable/round"
            android:textColor="#CBD1DC"
            android:gravity="center"
            android:padding="14dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/logIn_signUp"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:textStyle="bold"
            android:background="@drawable/round"
            android:textColor="#CBD1DC"
            android:gravity="center"
            android:padding="14dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"/>



    </LinearLayout>


</RelativeLayout>
