<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/ViewSelfPost_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#2C3646"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.example.shuangliang.safetrip.ViewSelfPostActivity"
        tools:showIn="@layout/ui_view_self_post_activity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="260dp"
                android:layout_height="65dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/Self_Post_MyPostLabel"
                android:id="@+id/ViewSelfPost_MyPost"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1"
            android:background="#2C3646"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/ViewSelfPost_Date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:gravity="center"
                android:text="@string/Self_Post_Date"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fdfcfc"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ViewSelfPost_Destination"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                android:text="@string/Self_Post_Destination"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#fdfcfc"
                android:textStyle="bold" />

        </LinearLayout>


        <ListView
            android:id="@+id/ViewSelfPost_SelfPostList"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="#dad4b9"></ListView>

    </LinearLayout>



</android.support.design.widget.CoordinatorLayout>


